[package]
name = "bellande_probability"
version = "0.1.2"
edition = "2021"
authors = ["Bellande Robotics Sensors Research Innovation Center"]
description = "A tool for running Bellande Probability calculations via API"
license = "GPL-3.0-or-later"
repository = "https://github.com/Robotics-Sensors/bellande_probability"
readme = "README.md"
keywords = ["robotics", "algorithms", "research"]
categories = ["science", "algorithms"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
structopt = "0.3"

[lib]
name = "bellande_probability"
path = "src/bellande_probability.rs"
